Filtros opcionais em expansion panel

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,6 +19,11 @@
             <mat-icon>file_copy</mat-icon> Duplicatas
           </mat-list-item>
         </a>
+        <a routerLink="/dashboard" (click)="onPageChange()">
+          <mat-list-item id="dashboard">
+            <mat-icon>file_copy</mat-icon> Dashboard - Vendas
+          </mat-list-item>
+        </a>
         <!-- <mat-slide-toggle id="tema" [(ngModel)]="temaEscuro" (change)="onThemeChange()" placeholder="Tema">
           Tema escuro
         </mat-slide-toggle> -->
